Minor: main.css: Fix setup select form elements that link spacing broke

--- a/static/main.css
+++ b/static/main.css
@@ -225,16 +225,9 @@ ol.linenums li {
     padding-top: 2em;
 }
 
-a[name] {
-    padding-top: 50px;
-    margin-top: -50px;
-    display: inline-block; /* required for webkit browsers */
-}
-
 .control-group {
   padding-top: 50px;
   margin-top: -50px;
-  display: inline-block; /* required for webkit browsers */
 }
 
 #dashboard a {
